# JovialGui

./: CMakeLists.txt  a.out  build.jov.sh  compile_commands.json
src/: Jimgui.cpp  Jimgui.h  JovialGui.cpp  JovialGui.h  main.cpp
